[gd_scene load_steps=5 format=3 uid="uid://thy7hpjhnl7"]

[ext_resource type="Theme" uid="uid://071qepx3jte6" path="res://!!Assets/Textures/Main Menu Theme.tres" id="1_mkofo"]
[ext_resource type="Script" path="res://!!Assets/Scripts/options.gd" id="2_fuxkd"]
[ext_resource type="Texture2D" uid="uid://cwsu1o2v617d" path="res://!!Assets/Sprites/Space Main Menu Background.jpg" id="3_58rs3"]
[ext_resource type="PackedScene" uid="uid://c70aaxip10cdv" path="res://Elijah/Hotkey.tscn" id="4_yn17k"]

[node name="Options" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_mkofo")
script = ExtResource("2_fuxkd")

[node name="2 players" type="VBoxContainer" parent="."]
z_index = 5
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 385.0
offset_top = -124.0
offset_right = 487.0
offset_bottom = -93.0
grow_vertical = 2

[node name="Button" type="Button" parent="2 players"]
layout_mode = 2
text = "2 players"

[node name="3 players" type="VBoxContainer" parent="."]
z_index = 5
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -47.0
offset_top = -125.0
offset_right = 53.0
offset_bottom = -85.0
grow_horizontal = 2
grow_vertical = 2

[node name="Button" type="Button" parent="3 players"]
layout_mode = 2
text = "3 players"

[node name="4 players" type="VBoxContainer" parent="."]
z_index = 5
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -487.0
offset_top = -125.0
offset_right = -384.0
offset_bottom = -85.0
grow_horizontal = 0
grow_vertical = 2

[node name="Button" type="Button" parent="4 players"]
layout_mode = 2
text = "4 players"

[node name="Close" type="Button" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -52.5
offset_top = -27.0
offset_right = 52.5
grow_horizontal = 2
grow_vertical = 0
size_flags_horizontal = 4
size_flags_vertical = 4
text = "Close"

[node name="Sprite2D" type="Sprite2D" parent="."]
z_index = -5
position = Vector2(576, 324)
scale = Vector2(2, 1.8)
texture = ExtResource("3_58rs3")

[node name="GridContainer" type="GridContainer" parent="."]
custom_minimum_size = Vector2(150, 100)
layout_mode = 0
offset_left = 100.0
offset_top = 350.0
offset_right = 250.0
offset_bottom = 450.0
columns = 3

[node name="Spacer" type="Control" parent="GridContainer"]
custom_minimum_size = Vector2(50, 50)
layout_mode = 2

[node name="p1_rebind_ip" parent="GridContainer" instance=ExtResource("4_yn17k")]
custom_minimum_size = Vector2(50, 50)
layout_mode = 2

[node name="Spacer2" type="Control" parent="GridContainer"]
custom_minimum_size = Vector2(50, 50)
layout_mode = 2

[node name="p1_rebind_down" parent="GridContainer" instance=ExtResource("4_yn17k")]
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
U_Action_Name = "p1_left"

[node name="p1_rebind_right" parent="GridContainer" instance=ExtResource("4_yn17k")]
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
U_Action_Name = "p1_down"

[node name="p1_rebind_left" parent="GridContainer" instance=ExtResource("4_yn17k")]
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
U_Action_Name = "p1_right"

[node name="Spacer3" type="Control" parent="GridContainer"]
custom_minimum_size = Vector2(50, 50)
layout_mode = 2

[node name="Label" type="Label" parent="GridContainer"]
layout_mode = 2
text = "P1"
horizontal_alignment = 1

[node name="GridContainer2" type="GridContainer" parent="."]
custom_minimum_size = Vector2(150, 100)
layout_mode = 0
offset_left = 300.0
offset_top = 350.0
offset_right = 450.0
offset_bottom = 450.0
columns = 3

[node name="Spacer" type="Control" parent="GridContainer2"]
custom_minimum_size = Vector2(50, 50)
layout_mode = 2

[node name="Hotkey_Rebind_Button" parent="GridContainer2" instance=ExtResource("4_yn17k")]
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
U_Action_Name = "p2_up"

[node name="Spacer2" type="Control" parent="GridContainer2"]
custom_minimum_size = Vector2(50, 50)
layout_mode = 2

[node name="Hotkey_Rebind_Button2" parent="GridContainer2" instance=ExtResource("4_yn17k")]
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
U_Action_Name = "p2_left"

[node name="Hotkey_Rebind_Button3" parent="GridContainer2" instance=ExtResource("4_yn17k")]
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
U_Action_Name = "p2_down"

[node name="Hotkey_Rebind_Button4" parent="GridContainer2" instance=ExtResource("4_yn17k")]
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
U_Action_Name = "p2_right"

[node name="Spacer3" type="Control" parent="GridContainer2"]
custom_minimum_size = Vector2(50, 50)
layout_mode = 2

[node name="Label" type="Label" parent="GridContainer2"]
layout_mode = 2
text = "P2"
horizontal_alignment = 1

[node name="GridContainer3" type="GridContainer" parent="."]
custom_minimum_size = Vector2(150, 100)
layout_mode = 0
offset_left = 696.0
offset_top = 350.0
offset_right = 854.0
offset_bottom = 454.0
columns = 3

[node name="Spacer" type="Control" parent="GridContainer3"]
custom_minimum_size = Vector2(50, 50)
layout_mode = 2

[node name="Hotkey_Rebind_Button" parent="GridContainer3" instance=ExtResource("4_yn17k")]
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
U_Action_Name = "p3_up"

[node name="Spacer2" type="Control" parent="GridContainer3"]
custom_minimum_size = Vector2(50, 50)
layout_mode = 2

[node name="Hotkey_Rebind_Button2" parent="GridContainer3" instance=ExtResource("4_yn17k")]
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
U_Action_Name = "p3_left"

[node name="Hotkey_Rebind_Button3" parent="GridContainer3" instance=ExtResource("4_yn17k")]
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
U_Action_Name = "p3_down"

[node name="Hotkey_Rebind_Button4" parent="GridContainer3" instance=ExtResource("4_yn17k")]
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
U_Action_Name = "p3_right"

[node name="Spacer3" type="Control" parent="GridContainer3"]
custom_minimum_size = Vector2(50, 50)
layout_mode = 2

[node name="Label" type="Label" parent="GridContainer3"]
layout_mode = 2
text = "P3"
horizontal_alignment = 1

[node name="GridContainer4" type="GridContainer" parent="."]
custom_minimum_size = Vector2(150, 100)
layout_mode = 0
offset_left = 896.0
offset_top = 350.0
offset_right = 1054.0
offset_bottom = 454.0
columns = 3

[node name="Spacer" type="Control" parent="GridContainer4"]
custom_minimum_size = Vector2(50, 50)
layout_mode = 2

[node name="Hotkey_Rebind_Button" parent="GridContainer4" instance=ExtResource("4_yn17k")]
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
U_Action_Name = "p4_up"

[node name="Spacer2" type="Control" parent="GridContainer4"]
custom_minimum_size = Vector2(50, 50)
layout_mode = 2

[node name="Hotkey_Rebind_Button2" parent="GridContainer4" instance=ExtResource("4_yn17k")]
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
U_Action_Name = "p4_left"

[node name="Hotkey_Rebind_Button3" parent="GridContainer4" instance=ExtResource("4_yn17k")]
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
U_Action_Name = "p4_down"

[node name="Hotkey_Rebind_Button4" parent="GridContainer4" instance=ExtResource("4_yn17k")]
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
U_Action_Name = "p4_right"

[node name="Spacer3" type="Control" parent="GridContainer4"]
custom_minimum_size = Vector2(50, 50)
layout_mode = 2

[node name="Label" type="Label" parent="GridContainer4"]
layout_mode = 2
text = "P4"
horizontal_alignment = 1

[node name="GridContainer5" type="GridContainer" parent="."]
custom_minimum_size = Vector2(150, 100)
layout_mode = 0
offset_left = 551.0
offset_top = 350.0
offset_right = 709.0
offset_bottom = 454.0

[node name="Hotkey_Rebind_Button" parent="GridContainer5" instance=ExtResource("4_yn17k")]
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
U_Action_Name = "Menu"

[node name="Label" type="Label" parent="GridContainer5"]
layout_mode = 2
text = "Menu"
horizontal_alignment = 1

[connection signal="pressed" from="2 players/Button" to="." method="_2player_pressed"]
[connection signal="pressed" from="3 players/Button" to="." method="_3player_pressed"]
[connection signal="pressed" from="4 players/Button" to="." method="_4player_pressed"]
[connection signal="pressed" from="Close" to="." method="_on_button_pressed"]
